fix: overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,6 @@
     background-color: var(--color-background);
     color: var(--color-foreground);
     font-family: var(--font-sans);
-    overflow: hidden;
     -webkit-font-smoothing: antialiased;
   }
 
